<resources>
    <string name="app_name">M117_quads</string>
    <string name="hint_title">Type title ...</string>
    <string name="hint_body">Type body ...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Note not saved because title is empty.</string>
    <string name="add_note">Add quad</string>
    <string name="menu_delete">Delete Note</string>
    <string name="menu_edit">Edit Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="quads">Quads</string>
    <string name="reservas">Reservas</string>
    <string name="nombre">Nombre</string>
    <string name="numeroTelef">Número</string>
    <string name="fechaRecogida">Fecha Recogida</string>
    <string name="fechaDevolucion">Fecha Devolución</string>"
    <string name="modificar_quad">MODIFICAR QUAD</string>
    <string name="matr_cula">Matrícula</string>
    <string name="tipo">Tipo</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripción</string>
    <string name="confirmar">Confirmar</string>
    <string name="matricula">Matrícula</string>
    <string name="tipo2">Tipo</string>
    <string name="precio2">Precio</string>
    <string name="crear">+ CREAR</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="crear_quad">CREAR QUAD</string>
    <string name="confirmar_creacion">CONFIRMAR CREACION</string>
    <string name="guardar_quad">GUARDAR QUAD</string>
    <string name="quad_matricula_label">Matrícula: %s</string>
    <string name="quad_tipo_label">Tipo: %s</string>
    <string name="quad_precio_label">Precio: %.2f euros</string>
    <string name="reserva_fechas_label">Recogida: %1$s\nDevolución: %2$s</string>
    <string name="enviar">ENVIAR</string>
    <string name="ordenar_por_nombre">Ordenar por nombre</string>
    <string name="ordenar_por_numero">Ordenar por número</string>
    <string name="ordenar_por_fecha_recogida">Ordenar por fecha de recogida</string>
    <string name="ordenar_por_fecha_devolucion">Ordenar por fecha de devolución</string>
</resources>