<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservas"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <Button
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#1E1E1E"
            android:text="@string/nombre"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <Button
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numeroTelef"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:backgroundTint="#1E1E1E" />

        <Button
            android:layout_width="6dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#1E1E1E"
            android:text="@string/fechaRecogida"
            android:textColor="#FFFFFF"
            android:textSize="11sp" />

        <Button
            android:layout_width="21dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fechaDevolucion"
            android:textSize="11sp"
            android:textColor="#FFFFFF"
            android:backgroundTint="#1E1E1E" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCrearReserva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear"
        android:textColor="#FFFFFF"
        android:backgroundTint="#272727"
        android:layout_marginTop="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerReservas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

</LinearLayout>