<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quads"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">
        
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/matricula"
            android:textColor="#FFFFFF"
            android:backgroundTint="#1E1E1E" />
        
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tipo2"
            android:textColor="#FFFFFF"
            android:backgroundTint="#1E1E1E" />
        
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/precio2"
            android:textColor="#FFFFFF"
            android:backgroundTint="#1E1E1E" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCrearQuad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear"
        android:textColor="#FFFFFF"
        android:backgroundTint="#272727"
        android:layout_marginTop="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Item Quad -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#1A1A1A"
                android:padding="12dp"
                android:layout_marginBottom="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#1A1A1A"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Matrícula: 875423QWE"
                        android:textColor="#FFFFFF" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tipo: monoplaza"
                        android:textColor="#FFFFFF" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Precio: 70 euros"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    android:layout_marginTop="8dp">


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#333333"
                        android:text="@string/modificar"
                        android:textColor="#FFFFFF" />

<!--                    <Space-->
<!--                        android:layout_width="16dp"-->
<!--                        android:layout_height="wrap_content" />-->


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eliminar"
                        android:textColor="#FFFFFF"
                        android:backgroundTint="#440000" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

